--- a/langchain_exp/pyproject.toml
+++ b/langchain_exp/pyproject.toml
@@ -11,6 +11,7 @@ langgraph = "^0.0.24"
 dashscope = "^1.19.2"
 ipykernel = "^6.29.4"
 openai = "^1.34.0"
+tavily-python = "^0.3.3"
 
 
 [build-system]
