--- a/rec_rf/pyproject.toml
+++ b/rec_rf/pyproject.toml
@@ -6,13 +6,12 @@ authors = ["Chen <crazyseabiscuit@gmail.come>"]
 
 
 [tool.poetry.dependencies]
-python = "^3.10.0"
-ray = {extras = ["rllib"], version = "^2.33.0"}
-tensorflow = "^2.17.0"
+python = "^3.9"
+ray = {extras = ["all"], version = "^2.34.0"}
 torch = "^2.4.0"
 scikit-learn = "^1.5.1"
-tqdm = "^4.66.4"
-matplotlib = "^3.9.1"
-paretoset = "^1.2.3"
+tqdm = "^4.66.5"
+
+[tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
-gym = "^0.26.2"
+
