--- a/langchain_exp/pyproject.toml
+++ b/langchain_exp/pyproject.toml
@@ -7,16 +7,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-langgraph = "^0.0.50"
-langchain-community  = "^0.2.0"
-langchain-core  = "^0.2.11"
-dashscope = "^1.19.2"
-ipykernel = "^6.29.4"
-tavily-python = "^0.3.3"
-httpx = "^0.27.0"
-langchain-openai = "^0.1.8"
-langchain-experimental = "^0.0.62"
+langchain-ollama = "^0.2.0"
+langgraph = "^0.2.21"
 langchainhub = "^0.1.21"
+langchain-openai = "^0.2.0"
+tavily-python = "^0.4.0"
+langchain = "^0.3.0"
+langchain-community = "^0.3.0"
+dashscope = "^1.20.10"
+ipython = "^8.27.0"
+
 
 
 [build-system]
