--- a/deepseek_exp/pyproject.toml
+++ b/deepseek_exp/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+openai = "^1.60.2"
+langchain-deepseek = "^0.1.3"
 
 
 [build-system]
