--- a/deepseek_exp/pyproject.toml
+++ b/deepseek_exp/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 openai = "^1.60.2"
 langchain-deepseek = "^0.1.3"
+googlesearch-python = "^1.3.0"
 
 
 [build-system]
